WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187813
REGRESSION(
r233926
): media/modern-media-controls/media-controller/media-controller-inline-to-fullscreen-to-pip-to-inline.html is a TIMEOUT failure
https://bugs.webkit.org/show_bug.cgi?id=187813
Summary
REGRESSION(r233926): media/modern-media-controls/media-controller/media-contr...
Jer Noble
Reported
2018-07-19 11:34:54 PDT
REGRESSION(
r233926
): media/modern-media-controls/media-controller/media-controller-inline-to-fullscreen-to-pip-to-inline.html is a TIMEOUT failure
Attachments
Patch
(1.90 KB, patch)
2018-07-19 11:37 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-07-19 11:37:16 PDT
Created
attachment 345365
[details]
Patch
WebKit Commit Bot
Comment 2
2018-07-19 13:48:50 PDT
Comment on
attachment 345365
[details]
Patch Clearing flags on attachment: 345365 Committed
r234002
: <
https://trac.webkit.org/changeset/234002
>
WebKit Commit Bot
Comment 3
2018-07-19 13:48:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-07-19 13:49:23 PDT
<
rdar://problem/42398374
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug